--- a/config/default.conf
+++ b/config/default.conf
@@ -5,22 +5,24 @@ Error_pages_dir: error_pages/
 Error_pages_400: 400.html 401.html 403.html 404.html
 Error_pages_500: 500.html 501.html 502.html 503.html 504.html
 Body_size_limit: 60000
+Root: root/
+Default_error_page: 403.html
 
 location / {
     methods: GET
-    autoindex: on/off
     redirection: /login
-    error_page: 404
+    autoindex: off
 }
-
 location /login {
     methods: GET POST
-    autoindex: off
     redirection: /
-
+    autoindex: off
+    error_page: 401.html
+    cgi: login.py
+    storage: data/login
 }
-
-location /uploads {
+location /upload {
     methods: GET POST DELETE
-
+    cgi: upload.py
+    storage: data/uploads
 }
