--- a/config/default.conf
+++ b/config/default.conf
@@ -2,8 +2,7 @@ Host: 127.0.0.1
 Port: 8080
 Server_name: webserv
 Error_pages_dir: error_pages/
-Error_pages_400: 400.html 401.html 403.html 404.html
-Error_pages_500: 500.html 501.html 502.html 503.html 504.html
+Error_pages: 400.html 401.html 403.html 404.html 500.html 501.html 502.html 503.html 504.html
 Body_size_limit: 60000
 Root: root/
 Default_error_page: 403.html
@@ -16,7 +15,7 @@ location / {
 location /login {
     methods: GET POST
     redirection: /
-    autoindex: off
+    autoindex: on
     error_page: 401.html
     cgi: login.py
     storage: data/login
@@ -25,4 +24,7 @@ location /upload {
     methods: GET POST DELETE
     cgi: upload.py
     storage: data/uploads
+}
+location /pages {
+    autoindex: on
 }
