--- a/config/default.conf
+++ b/config/default.conf
@@ -28,3 +28,34 @@ location /upload {
 location /pages {
     autoindex: on
 }
+
+Host: 127.0.0.1
+Port: 8081
+Server_name: webserv
+Error_pages_dir: error_pages/
+Error_pages: 400.html 401.html 403.html 404.html 500.html 501.html 502.html 503.html 504.html
+Body_size_limit: 60000
+Root: root/
+Default_error_page: 403.html
+
+location / {
+    methods: GET
+    redirection: /login
+    autoindex: off
+}
+location /login {
+    methods: GET POST
+    redirection: /
+    autoindex: on
+    error_page: 401.html
+    cgi: login.py
+    storage: data/login
+}
+location /upload {
+    methods: GET POST DELETE
+    cgi: upload.py
+    storage: data/uploads
+}
+location /pages {
+    autoindex: on
+}
