--- a/config/default.conf
+++ b/config/default.conf
@@ -1,11 +1,11 @@
 Host: 127.0.0.1
 Port: 8080
-Server_name: webserv
+Server_name: webserv.com
 Error_pages_dir: error_pages/
 Error_pages: 400.html 401.html 403.html 404.html 500.html 501.html 502.html 503.html 504.html
 Body_size_limit: 60000
 Root: root/
-Default_error_page: 403.html
+Default_error_page: 404.html
 
 location / {
     methods: GET
@@ -14,8 +14,6 @@ location / {
 }
 location /login {
     methods: GET POST
-    redirection: /
-    autoindex: on
     error_page: 401.html
     cgi: login.py
     storage: data/login
@@ -36,7 +34,7 @@ Error_pages_dir: error_pages/
 Error_pages: 400.html 401.html 403.html 404.html 500.html 501.html 502.html 503.html 504.html
 Body_size_limit: 60000
 Root: root/
-Default_error_page: 403.html
+Default_error_page: 404.html
 
 location / {
     methods: GET
@@ -48,7 +46,6 @@ location /login {
     redirection: /
     autoindex: on
     error_page: 401.html
-    cgi: login.py
     storage: data/login
 }
 location /upload {
@@ -59,6 +56,3 @@ location /upload {
 location /pages {
     autoindex: on
 }
-
-
-
