--- a/config/default.conf
+++ b/config/default.conf
@@ -8,9 +8,7 @@ Root: root/
 Default_error_page: 404.html
 
 location / {
-    methods: GET
-    redirection: /login
-    autoindex: off
+    redirect: /home
 }
 location /login {
     methods: GET POST
@@ -25,6 +23,7 @@ location /upload {
 }
 location /pages {
     autoindex: on
+#   тут скорее всего должен быть cgi: autoindex.py
 }
 
 Host: 127.0.0.1
