--- a/config/default.conf
+++ b/config/default.conf
@@ -3,27 +3,53 @@ Port: 8080
 Server_name: webserv.com
 Error_pages_dir: error_pages/
 Error_pages: 400.html 401.html 403.html 404.html 500.html 501.html 502.html 503.html 504.html
-Body_size_limit: 60000
+Body_size_lim   it: 60000
 Root: root/
 Default_error_page: 404.html
 
 location / {
     redirect: /home
 }
-location /login {
-    methods: GET POST
-    error_page: 401.html
-    cgi: login.py
-    storage: data/login
+location /home {
+    methods: GET
+    cgi: home.py
 }
-location /upload {
+location /profile {
     methods: GET POST DELETE
+    cgi: profile.py
+    storage: data/images
+}
+location /profile/upload {
+    methods: GET POST
     cgi: upload.py
-    storage: data/uploads
+    storage: data/images
+}
+location /sign_up {
+    methods: GET POST DELETE
+    cgi: signup.py
+    storage: data/.login
+}
+location /form_signup {
+    methods: POST
+    cgi: form_signup.py
+    storage: data/.login
+}
+location /form {
+    methods: GET POST
+    cgi: form.py
+    storage: data/.login
+}
+location /log_in {
+    methods: GET POST
+    cgi: login.py
+}
+location /logout {
+    methods: GET
+    cgi: logout.py
 }
 location /pages {
     autoindex: on
-#   тут скорее всего должен быть cgi: autoindex.py
+    cgi: autoindex.py
 }
 
 Host: 127.0.0.1
